# veryagent-plus

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  DEV-DIARY.md  Dockerfile  Dockerfile.ci  README.md  TROUBLESHOOTING.md  docker-compose.yml  install.ps1  install.sh  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rename_rust.sed  vitest.config.ts
.cargo/: config.toml
.github/workflows/: release.yml  test.yml
docs/: BUILD-SPEED.md  BUILD_GUIDE.md  CHANGELOG-v1.md  CLIENT-PRIVACY.md  DEVELOPMENT-PROGRESS.md  SKILL-SYSTEM-REPORT.md
docs/plans/: model-provider-all-agents.md
docs/readme/: README.ar.md  README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.pt.md  README.zh-CN.md  README.zh-TW.md
docs/releasing/: macos-signing.md
public/: welcome-logo.webm
scripts/: add-card-i18n.mjs  add-skills-i18n.mjs  add-skills-tools-i18n.mjs  prepare-macos-signing-secrets.sh  setup-dev.ps1  setup-dev.sh
src/: test-setup.test.ts  test-setup.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: check_hermes.rs
src-tauri/experts/: experts.toml
src-tauri/experts/skills/gemini-image/: SKILL.md
src-tauri/experts/skills/multimodal-vision/: SKILL.md
src-tauri/icons/: icon.icns  tray-icon-template.gen.py
src-tauri/resources/opencode/: models-dev.json
src-tauri/scripts/: prepare-sidecars.mjs
src-tauri/src/: app_error.rs  app_state.rs  git_credential.rs  git_repo.rs  keyring_store.rs  lib.rs  main.rs  paths.rs  pet_state_mapper.rs  preferences.rs  process.rs  supervise.rs  workspace_transfer.rs
src-tauri/src/acp/: binary_cache.rs  codex_goal.rs  connection.rs  event_stream.rs  feedback.rs  file_system_runtime.rs  idle_sweep.rs  internal_bus.rs  lifecycle.rs  manager.rs  mod.rs  opencode_catalog.rs  opencode_plugins.rs  preflight.rs  question.rs  registry.rs  session_info.rs  session_state.rs  terminal_runtime.rs  types.rs  vision_bridge.rs
src-tauri/src/acp/delegation/: broker.rs  companion.rs  depth.rs  listener.rs  meta_writer.rs  mod.rs  parent_watcher.rs  spawner.rs  tool_schema.json  transport.rs  types.rs
src-tauri/src/automation/: engine.rs
src-tauri/src/chat_channel/: command_handlers.rs  i18n.rs  message_formatter.rs  session_event_subscriber.rs  types.rs  webhook.rs
src-tauri/src/chat_channel/backends/: lark.rs  weixin.rs
src-tauri/src/commands/: acp.rs  conversations.rs  delegation.rs  experts.rs  feedback.rs  file_io.rs  folder_commands.rs  folders.rs  image_proxy.rs  logging.rs  mcp.rs  mod.rs  model_provider.rs  notification.rs  office_tools.rs  pet.rs  project_boot.rs  question.rs  quick_messages.rs  remote_proxy.rs  remote_workspace.rs  session_info.rs  system_settings.rs  terminal.rs  version_control.rs  vision_bridge.rs  windows.rs
src-tauri/src/commands/backup/: archive.rs  core.rs  crypto.rs  external.rs  manifest.rs  mod.rs  restore.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/entities/: agent_setting.rs  chat_channel_sender_context.rs  mod.rs  model_provider.rs  opened_tab.rs  prelude.rs  quick_message.rs  vision_bridge.rs
src-tauri/src/db/migration/: m20260330_000001_chat_channel.rs  m20260401_000001_chat_channel_sender_context.rs  m20260406_000001_agent_setting_model_provider.rs  m20260420_000001_opened_tabs.rs  m20260422_000001_folder_sort_order.rs  m20260423_000001_drop_folder_parent_branch.rs  m20260424_000001_folder_color.rs  m20260424_000002_quick_message.rs  m20260518_000001_model_provider_single_type_and_model.rs  m20260522_000001_delegation_columns.rs  m20260608_000001_conversation_title_locked.rs  m20260611_000001_folder_is_chat.rs  m20260711_000001_vision_bridge.rs  mod.rs
src-tauri/src/db/service/: conversation_service.rs  import_service.rs  mod.rs  model_provider_service.rs  quick_message_service.rs  remote_workspace_connection_service.rs  sender_context_service.rs  vision_bridge_service.rs
src-tauri/src/logging/: hub.rs  init.rs  layer.rs  mod.rs
src-tauri/src/models/: message.rs  model_provider.rs  pet.rs  quick_message.rs  system.rs
src-tauri/src/office_watch/: mod.rs
src-tauri/src/parsers/: claude.rs  codebuddy.rs  codex.rs  gemini.rs  hermes.rs  kimi_code.rs  mod.rs  pi.rs  summary_cache.rs
src-tauri/src/pets/: codex_import.rs  marketplace.rs  mod.rs
src-tauri/src/terminal/: manager.rs
src-tauri/src/update/: install.rs  mod.rs  runtime.rs  version.rs
src-tauri/src/web/: auth.rs  event_bridge.rs  mod.rs  router.rs  socket_inherit.rs
src-tauri/src/web/handlers/: backup.rs  conversations.rs  delegation.rs  event_metrics.rs  experts.rs  files.rs  folder_commands.rs  git.rs  mcp.rs  mod.rs  model_provider.rs  office_tools.rs  office_watch_proxy.rs  question.rs  quick_messages.rs  session_info.rs  terminal.rs  upload_jail.rs  version_control.rs  vision_bridge.rs  web_server.rs  workspace_files.rs
src-tauri/src/workspace_state/: mod.rs
src-tauri/tests/: api_integration.rs  backup_api.rs  credential_helper_subprocess.rs  delegation_columns.rs  delegation_e2e_uds.rs  delegation_e2e_windows.rs  office_watch_proxy.rs  parsers_snapshot.rs  sanity.rs  ws_attach.rs
src-tauri/tests/snapshots/: parsers_snapshot__claude_detail.snap  parsers_snapshot__claude_list.snap  parsers_snapshot__cline_detail.snap  parsers_snapshot__cline_list.snap  parsers_snapshot__codex_detail.snap  parsers_snapshot__codex_list.snap  parsers_snapshot__gemini_detail.snap  parsers_snapshot__gemini_list.snap  parsers_snapshot__openclaw_detail.snap  parsers_snapshot__openclaw_list.snap
src-tauri/windows/: installer-hooks.nsh
src/app/: globals.css  layout.tsx
src/components/: agent-icon.tsx  appearance-provider.tsx  i18n-provider.tsx  overlay-scrollbars-init.tsx
src/contexts/: acp-connections-context.test.tsx  acp-connections-context.tsx  ask-question-no-legacy-dialog.test.ts  conversation-runtime-context.test.tsx  conversation-runtime-context.tsx  git-credential-context.tsx  remote-connection-context.test.tsx  remote-connection-context.tsx  search-dialog-context.tsx  sidebar-context.tsx  tab-context.test.tsx  tab-context.tsx  (+2 more)
(+380 files in other folders)
